# opendata

./: .gitignore  AGENTS.md  README.md  TODO.md  opendata.md  opendata_todo.md  pyproject.toml  schemas.md
.github/workflows/: pages.yml  publish_official.yml
portal/: README.md  app.js  config.js  index.html  styles.css
producers/getopendata/binance-btcusdt-kline-1m/: main.py
producers/getopendata/coinbase-btc-usd-candles-1d/: main.py
producers/getopendata/coinbase-eth-usd-candles-1d/: main.py
producers/getopendata/coingecko-btc-usd-market-daily/: README.md  main.py
producers/getopendata/coingecko-eth-usd-market-daily/: main.py
producers/getopendata/ecb-eurofxref-hist/: main.py
producers/getopendata/fred-cpi-u-monthly/: README.md  main.py
producers/official/: README.md
schemas/: dataset_contract.md  dataset_contract_v1.md  metadata.md  metadata_v1.md  metadata_v2.md
scripts/: __init__.py  publish_official_local.py  publish_producers_local.py
src/opendata/: __init__.py  cli.py  client.py  deploy.py  env.py  errors.py  ids.py  metadata.py  portal_publish.py  producer.py  publish.py  registry.py  scaffold.py  versioning.py
tests/: test_deploy.py  test_http_storage.py  test_ids.py  test_local_roundtrip.py  test_metadata_registry.py  test_official_producers_contract.py  test_portal_publish_assets.py  test_portal_static.py  test_producer_publish.py  test_publish_dataframe.py  test_publish_official_script.py  test_publish_preview.py  test_publish_producers_script.py  test_readme_upload.py  test_registry_build.py  test_workflows.py
(+51 files in other folders)
